// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`newChoice copy values and add interactive and made choice 1`] = `
Object {
  "interactive": true,
  "made": false,
  "some": "values",
  "step": 1,
}
`;

exports[`newChoice copy values and add interactive false for characterSheet type 1`] = `
Object {
  "interactive": false,
  "made": false,
  "some": "values",
  "step": 1,
  "type": "characterSheet",
}
`;

exports[`newChoice copy values and add interactive false for dice type and content.master true 1`] = `
Object {
  "content": Object {
    "master": true,
  },
  "interactive": false,
  "made": false,
  "some": "values",
  "step": 1,
  "type": "dice",
}
`;

exports[`newChoice set step to step 2 if step 1 is made 1`] = `
Object {
  "interactive": true,
  "made": false,
  "some": "values",
  "step": 2,
}
`;
